@@ -29,6 +29,7 @@ import java.util.concurrent.TimeUnit;
 
 import org.eclipse.jetty.client.HttpClient;
 import org.eclipse.jetty.client.api.ContentResponse;
+import org.eclipse.jetty.client.dynamic.HttpClientTransportDynamic;
 import org.eclipse.jetty.client.http.HttpClientTransportOverHTTP;
 import org.eclipse.jetty.http.HttpStatus;
 import org.eclipse.jetty.http2.client.HTTP2Client;
@@ -38,7 +39,6 @@ import org.eclipse.jetty.unixsocket.client.HttpClientTransportOverUnixSockets;
 import org.eclipse.jetty.unixsocket.server.UnixSocketConnector;
 import org.eclipse.jetty.util.BlockingArrayQueue;
 import org.eclipse.jetty.util.IO;
-import org.eclipse.jetty.util.StringUtil;
 import org.eclipse.jetty.util.ssl.SslContextFactory;
 import org.eclipse.jetty.websocket.api.Session;
 import org.eclipse.jetty.websocket.api.StatusCode;
@@ -48,6 +48,7 @@ import org.junit.jupiter.api.Tag;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.condition.DisabledOnJre;
 import org.junit.jupiter.api.condition.DisabledOnOs;
+import org.junit.jupiter.api.condition.EnabledForJreRange;
 import org.junit.jupiter.api.condition.JRE;
 import org.junit.jupiter.api.condition.OS;
 import org.junit.jupiter.params.ParameterizedTest;
@@ -61,8 +62,8 @@ import static org.hamcrest.Matchers.not;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertNotEquals;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertTrue;
-import static org.junit.jupiter.api.Assumptions.assumeTrue;
 
 public class DistributionTests extends AbstractJettyHomeTest
 {
@@ -186,7 +187,6 @@ public class DistributionTests extends AbstractJettyHomeTest
     }
 
     @Test
-    @DisabledOnJre(JRE.JAVA_8)
     public void testSimpleWebAppWithJSPOnModulePath() throws Exception
     {
         String jettyVersion = System.getProperty("jettyVersion");
@@ -226,14 +226,12 @@ public class DistributionTests extends AbstractJettyHomeTest
     }
 
     @Test
-    @DisabledOnJre(JRE.JAVA_8)
     public void testSimpleWebAppWithJSPOverH2C() throws Exception
     {
         testSimpleWebAppWithJSPOverHTTP2(false);
     }
 
     @Test
-    @DisabledOnJre(JRE.JAVA_8)
     public void testSimpleWebAppWithJSPOverH2() throws Exception
     {
         testSimpleWebAppWithJSPOverHTTP2(true);
@@ -277,23 +275,14 @@ public class DistributionTests extends AbstractJettyHomeTest
     }
 
     @Test
-    @DisabledOnOs(OS.WINDOWS)  // jnr not supported on windows
+    @DisabledOnOs(value = OS.WINDOWS, disabledReason = "jnr not supported on windows")
     public void testUnixSocket() throws Exception
     {
-        Path tmpSockFile;
-        String unixSocketTmp = System.getProperty("unix.socket.tmp");
-        if (StringUtil.isNotBlank(unixSocketTmp))
-            tmpSockFile = Files.createTempFile(Paths.get(unixSocketTmp), "unix", ".sock");
-        else
-            tmpSockFile = Files.createTempFile("unix", ".sock");
-        if (tmpSockFile.toAbsolutePath().toString().length() > UnixSocketConnector.MAX_UNIX_SOCKET_PATH_LENGTH)
-        {
-            Path tmp = Paths.get("/tmp");
-            assumeTrue(Files.exists(tmp) && Files.isDirectory(tmp));
-            tmpSockFile = Files.createTempFile(tmp, "unix", ".sock");
-        }
-        Path sockFile = tmpSockFile;
-        assertTrue(Files.deleteIfExists(sockFile), "temp sock file cannot be deleted");
+        String dir = System.getProperty("jetty.unixdomain.dir");
+        assertNotNull(dir);
+        Path sockFile = Files.createTempFile(Path.of(dir), "unix_", ".sock");
+        assertTrue(sockFile.toAbsolutePath().toString().length() < UnixSocketConnector.MAX_UNIX_SOCKET_PATH_LENGTH, "Unix-Domain path too long");
+        Files.delete(sockFile);
 
         String jettyVersion = System.getProperty("jettyVersion");
         JettyHomeTester distribution = JettyHomeTester.Builder.newInstance()
@@ -314,7 +303,7 @@ public class DistributionTests extends AbstractJettyHomeTest
             File war = distribution.resolveArtifact("org.eclipse.jetty.demos:demo-jsp-webapp:war:" + jettyVersion);
             distribution.installWarFile(war, "test");
 
-            try (JettyHomeTester.Run run2 = distribution.start("jetty.unixsocket.path=" + sockFile.toString()))
+            try (JettyHomeTester.Run run2 = distribution.start("jetty.unixsocket.path=" + sockFile))
             {
                 assertTrue(run2.awaitConsoleLogsFor("Started Server@", 10, TimeUnit.SECONDS));
 
@@ -765,6 +754,213 @@ public class DistributionTests extends AbstractJettyHomeTest
                 startHttpClient();
                 ContentResponse response = client.GET("http://localhost:" + port);
                 assertEquals(HttpStatus.NOT_FOUND_404, response.getStatus());
+            }
+        }
+    }
+
+    @Test
+    public void testBeforeDirectiveInModule() throws Exception
+    {
+        String jettyVersion = System.getProperty("jettyVersion");
+        JettyHomeTester distribution = JettyHomeTester.Builder.newInstance()
+            .jettyVersion(jettyVersion)
+            .mavenLocalRepository(System.getProperty("mavenRepoPath"))
+            .build();
+
+        String[] args1 = {
+            "--add-modules=https,test-keystore"
+        };
+
+        try (JettyHomeTester.Run run1 = distribution.start(args1))
+        {
+            assertTrue(run1.awaitFor(10, TimeUnit.SECONDS));
+            assertEquals(0, run1.getExitValue());
+
+            Path jettyBase = run1.getConfig().getJettyBase();
+
+            Path jettyBaseEtc = jettyBase.resolve("etc");
+            Files.createDirectories(jettyBaseEtc);
+            Path sslPatchXML = jettyBaseEtc.resolve("ssl-patch.xml");
+            String nextProtocol = "fcgi/1.0";
+            String xml = "" +
+                "<?xml version=\"1.0\"?>" +
+                "<!DOCTYPE Configure PUBLIC \"-//Jetty//Configure//EN\" \"https://www.eclipse.org/jetty/configure_10_0.dtd\">" +
+                "<Configure id=\"sslConnector\" class=\"org.eclipse.jetty.server.ServerConnector\">" +
+                "  <Call name=\"addIfAbsentConnectionFactory\">" +
+                "    <Arg>" +
+                "      <New class=\"org.eclipse.jetty.server.SslConnectionFactory\">" +
+                "        <Arg name=\"next\">" + nextProtocol + "</Arg>" +
+                "        <Arg name=\"sslContextFactory\"><Ref refid=\"sslContextFactory\"/></Arg>" +
+                "      </New>" +
+                "    </Arg>" +
+                "  </Call>" +
+                "  <Call name=\"addConnectionFactory\">" +
+                "    <Arg>" +
+                "      <New class=\"org.eclipse.jetty.fcgi.server.ServerFCGIConnectionFactory\">" +
+                "        <Arg><Ref refid=\"sslHttpConfig\" /></Arg>" +
+                "      </New>" +
+                "    </Arg>" +
+                "  </Call>" +
+                "</Configure>";
+            Files.write(sslPatchXML, List.of(xml), StandardOpenOption.CREATE);
+
+            Path jettyBaseModules = jettyBase.resolve("modules");
+            Files.createDirectories(jettyBaseModules);
+            Path sslPatchModule = jettyBaseModules.resolve("ssl-patch.mod");
+            String module = "" +
+                "[depends]\n" +
+                "fcgi\n" +
+                "\n" +
+                "[before]\n" +
+                "https\n" +
+                "http2\n" + // http2 is not explicitly enabled.
+                "\n" +
+                "[after]\n" +
+                "ssl\n" +
+                "\n" +
+                "[xml]\n" +
+                "etc/ssl-patch.xml\n";
+            Files.write(sslPatchModule, List.of(module), StandardOpenOption.CREATE);
+
+            String[] args2 = {
+                "--add-modules=ssl-patch"
+            };
+
+            try (JettyHomeTester.Run run2 = distribution.start(args2))
+            {
+                assertTrue(run2.awaitFor(10, TimeUnit.SECONDS));
+                assertEquals(0, run2.getExitValue());
+
+                int port = distribution.freePort();
+                try (JettyHomeTester.Run run3 = distribution.start("jetty.http.port=" + port))
+                {
+                    assertTrue(run3.awaitConsoleLogsFor("Started Server@", 10, TimeUnit.SECONDS));
+
+                    // Check for the protocol order: fcgi must be after ssl and before http.
+                    assertTrue(run3.getLogs().stream()
+                        .anyMatch(log -> log.contains("(ssl, fcgi/1.0, http/1.1)")));
+
+                    // Protocol "h2" must not be enabled because the
+                    // http2 Jetty module was not explicitly enabled.
+                    assertFalse(run3.getLogs().stream()
+                        .anyMatch(log -> log.contains("h2")), "Full logs: " + String.join("", run3.getLogs()));
+                }
+            }
+        }
+    }
+
+    @Test
+    public void testDefaultLoggingProviderNotActiveWhenExplicitProviderIsPresent() throws Exception
+    {
+        String jettyVersion = System.getProperty("jettyVersion");
+        JettyHomeTester distribution1 = JettyHomeTester.Builder.newInstance()
+            .jettyVersion(jettyVersion)
+            .mavenLocalRepository(System.getProperty("mavenRepoPath"))
+            .build();
+
+        String[] args1 = {
+            "--approve-all-licenses",
+            "--add-modules=logging-logback,http"
+        };
+
+        try (JettyHomeTester.Run run1 = distribution1.start(args1))
+        {
+            assertTrue(run1.awaitFor(10, TimeUnit.SECONDS));
+            assertEquals(0, run1.getExitValue());
+
+            Path jettyBase = run1.getConfig().getJettyBase();
+
+            assertTrue(Files.exists(jettyBase.resolve("resources/logback.xml")));
+            // The jetty-logging.properties should be absent.
+            assertFalse(Files.exists(jettyBase.resolve("resources/jetty-logging.properties")));
+        }
+
+        JettyHomeTester distribution2 = JettyHomeTester.Builder.newInstance()
+            .jettyVersion(jettyVersion)
+            .mavenLocalRepository(System.getProperty("mavenRepoPath"))
+            .build();
+
+        // Try the modules in reverse order, since it may execute a different code path.
+        String[] args2 = {
+            "--approve-all-licenses",
+            "--add-modules=http,logging-logback"
+        };
+
+        try (JettyHomeTester.Run run2 = distribution2.start(args2))
+        {
+            assertTrue(run2.awaitFor(1000, TimeUnit.SECONDS));
+            assertEquals(0, run2.getExitValue());
+
+            Path jettyBase = run2.getConfig().getJettyBase();
+
+            assertTrue(Files.exists(jettyBase.resolve("resources/logback.xml")));
+            // The jetty-logging.properties should be absent.
+            assertFalse(Files.exists(jettyBase.resolve("resources/jetty-logging.properties")));
+        }
+    }
+
+    @Test
+    @EnabledForJreRange(min = JRE.JAVA_16)
+    public void testUnixDomain() throws Exception
+    {
+        String jettyVersion = System.getProperty("jettyVersion");
+        JettyHomeTester distribution = JettyHomeTester.Builder.newInstance()
+            .jettyVersion(jettyVersion)
+            .mavenLocalRepository(System.getProperty("mavenRepoPath"))
+            .build();
+
+        try (JettyHomeTester.Run run1 = distribution.start("--add-modules=unixdomain-http"))
+        {
+            assertTrue(run1.awaitFor(10, TimeUnit.SECONDS));
+            assertEquals(0, run1.getExitValue());
+
+            int maxUnixDomainPathLength = 108;
+            Path path = Files.createTempFile("unix", ".sock");
+            if (path.normalize().toAbsolutePath().toString().length() > maxUnixDomainPathLength)
+                path = Files.createTempFile(Path.of("/tmp"), "unix", ".sock");
+            assertTrue(Files.deleteIfExists(path));
+            try (JettyHomeTester.Run run2 = distribution.start("jetty.unixdomain.path=" + path))
+            {
+                assertTrue(run2.awaitConsoleLogsFor("Started Server@", 10, TimeUnit.SECONDS));
+
+                ClientConnector connector = ClientConnector.forUnixDomain(path);
+                client = new HttpClient(new HttpClientTransportDynamic(connector));
+                client.start();
+                ContentResponse response = client.GET("http://localhost/path");
+                assertEquals(HttpStatus.NOT_FOUND_404, response.getStatus());
+            }
+        }
+    }
+
+    @Test
+    public void testModuleWithExecEmitsWarning() throws Exception
+    {
+        String jettyVersion = System.getProperty("jettyVersion");
+        JettyHomeTester distribution = JettyHomeTester.Builder.newInstance()
+            .jettyVersion(jettyVersion)
+            .mavenLocalRepository(System.getProperty("mavenRepoPath"))
+            .build();
+
+        Path jettyBase = distribution.getJettyBase();
+        Path jettyBaseModules = jettyBase.resolve("modules");
+        Files.createDirectories(jettyBaseModules);
+        Path execModule = jettyBaseModules.resolve("exec.mod");
+        String module = "" +
+            "[exec]\n" +
+            "--show-version";
+        Files.write(execModule, List.of(module), StandardOpenOption.CREATE);
+
+        try (JettyHomeTester.Run run1 = distribution.start(List.of("--add-modules=http,exec")))
+        {
+            assertTrue(run1.awaitFor(10, TimeUnit.SECONDS));
+            assertEquals(0, run1.getExitValue());
+
+            int port = distribution.freePort();
+            try (JettyHomeTester.Run run2 = distribution.start("jetty.http.port=" + port))
+            {
+                assertTrue(run2.awaitConsoleLogsFor("Started Server@", 10, TimeUnit.SECONDS));
+                assertTrue(run2.getLogs().stream()
+                    .anyMatch(log -> log.contains("WARN") && log.contains("Forking")));
             }
         }
     }
